--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.1",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.2.1",
+    "react-helmet-async": "^2.0.5",
     "uuid": "^13.0.0",
     "vite-plugin-pwa": "^1.2.0"
   },
